<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.xzyphismd.partyplannerbeta.CalcBeta"
    android:background="#1e4688">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/nMediumDrinkLB"
        android:layout_marginStart="0dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightLB"
            android:id="@+id/nLightDrinkLB"
            android:textColor="#000000"
            android:textIsSelectable="false"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_gravity="right"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medLB"
            android:id="@+id/nMediumDrinkLB"
            android:textColor="#000000"
            android:textIsSelectable="true"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="18dp"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heavyLB"
            android:id="@+id/nHeavyDrinkLB"
            android:textColor="#000000"
            android:textIsSelectable="true"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_marginTop="18dp"
            android:layout_gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_toEndOf="@+id/linearLayout"
        android:layout_marginStart="18dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/nLightDrinkET"
            android:editable="false"
            android:gravity="left"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="0"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:allowUndo="false"
            android:autoText="false"
            android:background="#50b3b3b3"
            android:paddingLeft="5dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/nMediumDrinkET"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="0"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="5dp"
            android:background="#50b3b3b3" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/nHeavyDrinkET"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="0"
            android:layout_gravity="left"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:background="#50b3b3b3" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentEnd="true"
        android:background="#000000"
        android:backgroundTint="#000000"
        android:backgroundTintMode="multiply"
        android:foreground="#000000"
        android:foregroundTint="#000000"
        android:id="@+id/space" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"
        android:id="@+id/outputTable"
        android:layout_centerHorizontal="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignTop="@+id/space">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_column="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beer"
                android:id="@+id/nBeerLB"
                android:layout_column="0"
                android:textStyle="bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/nBeerET"
                android:layout_column="2"
                android:editable="false"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wine"
                android:id="@+id/nWineLB"
                android:layout_column="0"
                android:textStyle="bold"
                android:editable="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/nWineET"
                android:layout_column="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liquor"
                android:id="@+id/nLiqLB"
                android:layout_column="0"
                android:textStyle="bold" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/nLiqET"
                android:layout_column="2"
                android:editable="false"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalD"
                android:id="@+id/nTotalLb"
                android:layout_column="0"
                android:textStyle="bold|italic" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/nTotalET"
                android:layout_column="2"
                android:editable="false" />
        </TableRow>
    </TableLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/WheelET"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="58dp"
        android:layout_alignEnd="@+id/linearLayout2"
        android:ems="5"
        android:editable="true"
        android:clickable="true"
        android:contextClickable="true" />

</RelativeLayout>
